fix: i18n in custom dashboard

--- a/locales/en.json
+++ b/locales/en.json
@@ -719,6 +719,7 @@
     "prod environment": "prod environment",
     "production": "production",
     "professional": "professional",
+    "progressing": "progressing",
     "project": "project",
     "Project description": "Project description",
     "Project logo": "Project logo",
