--- a/locales/zh.json
+++ b/locales/zh.json
@@ -719,6 +719,7 @@
     "prod environment": "生产环境",
     "production": "生产",
     "professional": "专业版",
+    "progressing": "进行中",
     "project": "项目",
     "Project description": "项目描述",
     "Project logo": "项目图标",
