fix(#3287): match key to value in en.json * feat: personal workspace internationalization optimization

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -280,7 +280,7 @@
     "cannot contain special characters": "不能包含特殊字符",
     "cannot exceed {max} characters": "不能超过 {max} 个字符",
     "capacity type": "容量型",
-    "cellphone": "手机",
+    "Phone": "手机",
     "Certificate": "证书",
     "change account permissions": "更改账号权限",
     "Channel name": "渠道名称",
@@ -539,7 +539,7 @@
     "label": "标签",
     "Label tip": "标签提示",
     "land page": "着陆页",
-    "last login time": "最近登录时间",
+    "Last login time": "最近登录时间",
     "Last month": "上个月",
     "Last week": "上周",
     "last {amount} {unit}": "最近{amount}{unit}",
@@ -602,6 +602,7 @@
     "new password": "新密码",
     "new {name}": "新建{name}",
     "nickname": "昵称",
+    "No {item}": "暂无{item}",
     "no available version": "暂无可用版本",
     "no available {item}": "暂无{item}",
     "No description": "暂无描述",
@@ -653,7 +654,6 @@
     "Other settings": "其他设置",
     "out params exist the same {key}": "出参存在相同的{key}",
     "out params {name} setting is abnormal": "出参 {name} 设置异常",
-
     "page 1": "第一页",
     "page loading completed": "网页加载完成",
     "parameter cannot be empty": "参数不能为空",
@@ -671,7 +671,7 @@
     "pending execution": "待执行",
     "Performance range": "性能区间",
     "Period": "周期",
-    "Phone": "电话",
+    "Phone-tel": "电话",
     "pipeline": "流水线",
     "Platform": "平台",
     "platform configs": "平台配置",
@@ -910,7 +910,7 @@
     "Title": "标题",
     "today": "今天",
     "total": "总",
-    "total {total} items": "共 {total} 条",
+    "Totally {total} items": "共 {total} 条",
     "total {total} items, current display top 10000": "共 {total} 条，当前显示前10000条",
     "traffic audit": "流量审计",
     "Traffic Overview": "流量概览",
