--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1797,7 +1797,9 @@
     "sprint": "迭代",
     "srm": "采供能力",
     "Starred apps": "星标应用",
+    "No starred apps": "暂无星标应用",
     "Starred projects": "星标项目",
+    "No starred projects": "暂无星标项目",
     "start analysis": "启动分析",
     "start command": "启动命令",
     "start cron": "开始定时",
