feat(dop): release labels

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -828,6 +828,7 @@
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
     "Are you sure to release relationship with {name}": "Are you sure to release relationship with {name}",
+    "Artifacts Labels": "Artifacts Labels",
     "Basic": "Basic",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
     "Built-in code base": "Built-in code base",
@@ -899,6 +900,7 @@
     "Scenes": "Scenes",
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
     "System built-in Git repository": "System built-in Git repository",
+    "Labels can be used in release management, to quickly locate and filter related content.": "Labels can be used in release management, to quickly locate and filter related content.",
     "Labels can be used in issue management and test management, to quickly locate and filter related content.": "Tags can be used in issue management and test management, and reasonable use can quickly locate and filter related content",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "Tell about your project in one sentence, so that more people can quickly understand your project, go to",
     "Testcase": "Testcase",
@@ -1403,6 +1405,7 @@
     "Content-issue": "Content",
     "Custom Issue Field": "Custom Issue Field",
     "Issue field": "Issue field",
+    "Issue labels": "Issue labels",
     "Issue-list": "Issue",
     "Title-issue": "Title",
     "Type-issue": "Type",
@@ -1426,7 +1429,6 @@
     "label created successfully": "label created successfully",
     "label deleted successfully": "label deleted successfully",
     "Label name": "Label name",
-    "Label Settings": "Label Settings",
     "label updated successfully": "label updated successfully",
     "Less than or equal to": "Less than or equal to",
     "letters, numbers, underscores and hyphens": "letters, numbers, _, and -",
@@ -1441,6 +1443,7 @@
     "loop strategy": "loop strategy",
     "Low": "Low",
     "Mainly manages the configuration of issue attributes, saved as the issue template configuration for the entire organization-level project.": "Mainly manages the configuration of issue attributes, saved as the issue template configuration for the entire organization-level project.",
+    "Manage all artifacts labels": "Manage all artifacts labels",
     "Manage all project labels": "Manage all project labels",
     "manage the group of releases": "manage the group of releases",
     "Manual Testing": "Manual Testing",
