--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -828,6 +828,7 @@
     "Are you sure to disinclude {name}": "确认解除与 {name} 的包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
     "Are you sure to release relationship with {name}": "确认接触与 {name} 的关系吗",
+    "Artifacts Labels": "制品标签",
     "Basic": "基本",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Built-in code base": "内置代码库",
@@ -899,6 +900,7 @@
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
     "System built-in Git repository": "系统内置Git仓库",
+    "Labels can be used in release management, to quickly locate and filter related content.": "标签可以用于制品管理中，合理使用能够快速定位和过滤相关内容",
     "Labels can be used in issue management and test management, to quickly locate and filter related content.": "标签可以用于事项管理、测试管理中，合理使用能够快速定位和过滤相关内容",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Testcase": "用例",
@@ -1403,6 +1405,7 @@
     "Content-issue": "问题详情",
     "Custom Issue Field": "事项自定义字段",
     "Issue field": "事项字段",
+    "Issue labels": "事项标签",
     "Issue-list": "事项列表",
     "Title-issue": "问题标题",
     "Type-issue": "事项类型",
@@ -1426,7 +1429,6 @@
     "label created successfully": "创建标签成功",
     "label deleted successfully": "删除标签成功",
     "Label name": "标签名称",
-    "Label Settings": "标签设置",
     "label updated successfully": "更新标签成功",
     "Less than or equal to": "小于等于",
     "letters, numbers, underscores and hyphens": "字母、数字、下划线及中划线",
@@ -1441,6 +1443,7 @@
     "loop strategy": "循环策略",
     "Low": "一般",
     "Mainly manages the configuration of issue attributes, saved as the issue template configuration for the entire organization-level project.": "主要管理事项字段属性的自定义配置，保存为整个组织级项目的事项模板配置。",
+    "Manage all artifacts labels": "管理所有制品标签",
     "Manage all project labels": "管理所有项目标签",
     "manage the group of releases": "管理该组制品",
     "Manual Testing": "手动测试",
