--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1384,6 +1384,7 @@
     "Input the step": "Input the step",
     "input task name": "input task name",
     "Please enter the ticket name": "Please enter the ticket name",
+    "Input": "Input",
     "Inputs": "Inputs",
     "Input configuration": "Input configuration",
     "inputs form": "inputs form",
