--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1384,6 +1384,7 @@
     "Input the step": "输入步骤",
     "input task name": "请输入任务名称",
     "Please enter the ticket name": "请输入工单名称",
+    "Input": "入参",
     "Inputs": "入参配置",
     "Input configuration": "入参表单配置",
     "inputs form": "入参表单",
