--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1291,6 +1291,7 @@
     "Example": "示例",
     "example {content}": "示例: {content}",
     "execute at once": "立即执行",
+    "Execute Inputs": "执行入参",
     "Execution Records": "执行记录",
     "execute result": "执行结果",
     "execute time": "执行时间",
