--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1291,6 +1291,7 @@
     "Example": "Example",
     "example {content}": "example: {content}",
     "execute at once": "execute at once",
+    "Execute Inputs": "Execute Inputs",
     "Execution Records": "Execution Records",
     "execute result": "execute result",
     "execute time": "execute time",
