feat: add in/out params in project pipeline (#3315)
* feat: add in params in project pipeline

* fix: delete useless

* fix: fix style

* fix: fix i18n

* fix: delete useless

* fix: delete useless

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1293,6 +1293,7 @@
     "Example": "Example",
     "example {content}": "example: {content}",
     "execute at once": "execute at once",
+    "Execute Inputs": "Execute Inputs",
     "Execution Records": "Execution Records",
     "execute result": "execute result",
     "execute time": "execute time",
@@ -1386,6 +1387,7 @@
     "Input the step": "Input the step",
     "input task name": "input task name",
     "Please enter the ticket name": "Please enter the ticket name",
+    "Input": "Input",
     "Inputs": "Inputs",
     "Input configuration": "Input configuration",
     "inputs form": "inputs form",
