--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1293,6 +1293,7 @@
     "Example": "示例",
     "example {content}": "示例: {content}",
     "execute at once": "立即执行",
+    "Execute Inputs": "执行入参",
     "Execution Records": "执行记录",
     "execute result": "执行结果",
     "execute time": "执行时间",
@@ -1386,6 +1387,7 @@
     "Input the step": "输入步骤",
     "input task name": "请输入任务名称",
     "Please enter the ticket name": "请输入工单名称",
+    "Input": "入参",
     "Inputs": "入参配置",
     "Input configuration": "入参表单配置",
     "inputs form": "入参表单",
