--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -946,6 +946,8 @@
     "Activity": "活动",
     "actual value": "实际值",
     "Add": "新增",
+    "Add all": "全部创建",
+    "Add-create": "创建",
     "Add Access Control Rule": "添加门禁规则",
     "Add-service": "添加服务",
     "add at least one": "至少添加一条",
@@ -1584,7 +1586,6 @@
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
-    "pipeline files were discovered in the {branch} branch of the {app} application today": "{app} 应用的 {branch} 分支下，本日新发现了流水线文件",
     "Pipeline type": "流水线分类",
     "pipeline-changed-tip1": "当前流水线内容已变更，需要手动切换查看",
     "pipeline-changed-tip2": "当前流水线内容已变更，详情可以",
@@ -1975,6 +1976,7 @@
     "yml format error": "yml格式错误",
     "yml-addon-not-exist-tip": "当前实例不存在，请切换到编辑模式重新添加",
     "your browser does not support WebSocket!": "您的浏览器不支持 WebSocket!",
+    "{app}: {branch}, gets new pipelines {time}": "{app}: {branch}, 于 {time}发现了新流水线文件",
     "{num} members are following": "{num} 位成员正在关注",
     "{num} people followed": "{num} 人关注"
   },
