feat(common): internationalization-optimization *feat: side menu *feat: tab menu

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,7 @@
     "Alibaba Cloud": "Alibaba Cloud",
     "All members of the organization can view": "all members of the current company can view",
     "App": "App",
+    "Apps": "Apps",
     "Approve": "Approve",
     "April": "April",
     "Are you sure to leave?": "Are you sure to leave?",
@@ -184,6 +185,7 @@
     "Add-application": "Add",
     "Add-member": "Add",
     "add project": "add project",
+    "Add Project": "Add Project",
     "add {name}": "add {name}",
     "added successfully": "added successfully",
     "addon": "addon",
@@ -194,7 +196,7 @@
     "Advanced Search": "Advanced Search",
     "advanced settings": "advanced settings",
     "agree": "agree",
-    "Configuration": "Configuration",
+    "Configuration-alarm": "Configuration",
     "alarm data report": "alarm data report",
     "Overview-alarm": "Overview",
     "History": "History",
@@ -328,8 +330,8 @@
     "Comparison operator": "Comparison operator",
     "comparison results": "comparison results",
     "Component": "Component",
-    "config": "config",
-    "config sheet": "config sheet",
+    "Configuration": "Configuration",
+    "Configuration Sheet": "Configuration Sheet",
     "configuration information": "configuration information",
     "configuration mode": "configuration mode",
     "configuration upgrade": "configuration upgrade",
@@ -414,6 +416,7 @@
     "detail": "detail",
     "dev": "dev",
     "dev environment": "dev environment",
+    "Dev environment": "Dev environment",
     "develop": "develop",
     "developer": "developer",
     "device ID": "device ID",
@@ -576,6 +579,7 @@
     "merge": "merge",
     "merged at": "merged at",
     "Message": "Message",
+    "message": "message",
     "Message-center": "Message",
     "meters": "meters",
     "Microservice": "Microservice",
@@ -667,12 +671,12 @@
     "path starts with /": "path starts with /",
     "pause": "pause",
     "pending": "pending",
-    "pending approval": "pending approval",
+    "Pending": "Pending",
     "pending execution": "pending execution",
     "Performance range": "Performance range",
     "Period": "Period",
     "Phone-tel": "Phone",
-    "pipeline": "pipeline",
+    "Pipelines": "Pipelines",
     "Platform": "Platform",
     "platform configs": "platform configs",
     "please authenticate first": "please authenticate first",
@@ -717,6 +721,7 @@
     "In Progress": "In Progress",
     "prod": "prod",
     "prod environment": "prod environment",
+    "Production environment": "Production environment",
     "production": "production",
     "professional": "professional",
     "progressing": "progressing",
@@ -773,7 +778,7 @@
     "Request Limit": "Request Limit",
     "Request method": "Request method",
     "required": "required",
-    "requirement": "requirement",
+    "Requirement": "Requirement",
     "Requirement & Task": "Requirement & Task",
     "reset": "reset",
     "reset Password": "reset Password",
@@ -843,6 +848,7 @@
     "specification": "specification",
     "staging": "staging",
     "staging environment": "staging environment",
+    "Staging environment": "Staging environment",
     "Standard": "Standard",
     "start": "start",
     "Start time": "Start time",
@@ -877,9 +883,9 @@
     "System version": "System version",
     "tag": "tag",
     "Label": "Label",
-    "task": " task",
+    "Task": " Task",
     "ID": "ID",
-    "Task": "Task",
+    "Task-list": "Task",
     "Task type": "Task type",
     "tcp protocol": "tcp protocol",
     "template already exists": "template already exists",
@@ -888,6 +894,7 @@
     "template was created successfully": "template was created successfully",
     "test": "test",
     "test environment": "test environment",
+    "Test environment": "Test environment",
     "Testing": "Testing",
     "Text Mode": "Text Mode",
     "the current request has no {name}": "the current request has no {name}",
