--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -483,7 +483,7 @@
     "partition order message": "partition order message",
     "pay as you go": "pay as you go",
     "payment methods": "payment methods",
-    "pending approval": "pending approval",
+    "Pending": "Pending",
     "performance type": "performance type",
     "platform occupies 2 nodes": "platform occupies 2 nodes",
     "platform-vpn client network segment": "platform-vpn client network segment",
@@ -800,7 +800,7 @@
     "startDate": "startDate",
     "state": "state",
     "Switch": "Switch",
-    "test case": "test case",
+    "Test Case": "Test Case",
     "text": "text",
     "Text Edit": "Text Edit",
     "Text Type": "Text Type",
@@ -893,8 +893,7 @@
     "Please enter the repository address started with http or https.": "Please enter the repository address started with http or https.",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "Please fill in the json expression of obtained target key to determine if the key exists.",
     "Post": "Post",
-    "Project homepage": "Project homepage",
-    "Projects": "Projects",
+    "Projects-manage": "Projects",
     "Reference": "Reference",
     "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "Rendering multi-layer nested structures is not supported at this time, please go to text mode.",
     "Scenes": "Scenes",
@@ -989,7 +988,8 @@
     "app logo": "app logo",
     "App Member": "App Member",
     "app name": "app name",
-    "app release": "app release",
+    "App Artifacts": "App Artifacts",
+    "App artifact": "App artifact",
     "app release confirmation": "app release confirmation",
     "App repository address": "App repository address",
     "App type": "App type",
@@ -1155,7 +1155,6 @@
     "Complex": "Complex",
     "Complexity": "Complexity",
     "condition to end loop": "condition to end loop",
-    "config data": "config data",
     "config information": "config information",
     "Configuration Center": "Configuration Center",
     "Configuration": "Configuration",
@@ -1364,7 +1363,7 @@
     "Help you better manage your notifications": "Help you better manage your notifications",
     "High": "High",
     "historical analysis": "historical analysis",
-    "home page": "home page",
+    "Homepage": "Homepage",
     "Host address": "Host address",
     "hosts mapping": "hosts mapping",
     "How to start": "How to start",
@@ -1377,7 +1376,7 @@
     "Import source": "Import source",
     "Import use case": "Import use case",
     "Informal": "Informal",
-    "Initiated by me": "Initiated by me",
+    "Initiated by Me": "Initiated by Me",
     "input bug name": "input bug name",
     "input custom boards name": "input custom boards name",
     "Input the expected result": "Input the expected result",
@@ -1484,7 +1483,7 @@
     "Move to": "Move to",
     "mr-tpl-unit-test": "Unit testing（Note:unit testing must be able to run locally, in any environment, please mock or evade dependencies）",
     "must start with a letter or number": "must start with a letter or number",
-    "my approval": "my approval",
+    "Approved by Me": "Approved by Me",
     "name is required": "name is required",
     "Network configuration": "Network configuration",
     "new": "new",
@@ -1561,7 +1560,7 @@
     "outputs form": "outputs form",
     "overall score": "overall score",
     "owned application": "owned application",
-    "Iteration": "Iteration",
+    "Iteration-owned": "Iteration",
     "owned status": "owned status",
     "p1": "P1",
     "p2": "P2",
@@ -1674,7 +1673,7 @@
     "Private-project": "Private",
     "professional edition": "professional edition",
     "Progress": "Progress",
-    "project collaboration": "project collaboration",
+    "Collaboration": "Collaboration",
     "Project collaborative participation index": "Project collaborative participation index",
     "project created successfully": "project created successfully",
     "project deleted successfully": "project deleted successfully",
@@ -1687,7 +1686,7 @@
     "project updated successfully": "project updated successfully",
     "project-img-copyright-tip": "* image by Scott Webb on Pexels",
     "Once set as a project-level app, the pipeline of this app can directly call the pipeline of other apps in the project.": "Once set as a project-level app, the pipeline of this app can directly call the pipeline of other apps in the project.",
-    "projects": "projects",
+    "Projects": "Projects",
     "protect branch, not editable": "protect branch, not editable",
     "Branch protection": "Branch protection",
     "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.": "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.",
@@ -1800,7 +1799,7 @@
     "source branch has been deleted": "source branch has been deleted",
     "source branch is protected, you have no permission yet": "source branch is protected, you have no permission yet",
     "Source type": "Source type",
-    "sprint": "sprint",
+    "Iteration": "Iteration",
     "srm": "srm",
     "Starred apps": "Starred apps",
     "No starred apps": "No starred apps",
@@ -1859,7 +1858,7 @@
     "task params": "task params",
     "template select": "template select",
     "Terminated": "Terminated",
-    "test case": "test case",
+    "Test Case": "Test Case",
     "Number of test days": "Number of test days",
     "Principal-test": "Principal",
     "Test output": "Test output",
@@ -1867,10 +1866,12 @@
     "Test pass rate": "Test pass rate",
     "Plan": "Plan",
     "test plan status": "test plan status",
-    "test report": "test report",
+    "Test Reports": "Test Reports",
+    "Test Report": "Test Report",
     "Test report details": "Test report details",
     "Test set": "Test set",
-    "test statistics": "test statistics",
+    "Test statistics": "Test statistics",
+    "Test Statistics": "Test Statistics",
     "Test summary": "Test summary",
     "testing": "testing",
     "the alarm strategy will be permanently deleted": "the alarm strategy will be permanently deleted",
@@ -2581,7 +2582,7 @@
     "Top detail": "Top detail",
     "User id and device id cannot be empty at the same time": "User id and device id cannot be empty at the same time",
     "active user": "active user",
-    "add content": "add content",
+    "Add": "Add",
     "add version": "add version",
     "affect the number of users": "affect the number of users",
     "affect the proportion of users": "affect the proportion of users",
@@ -2620,7 +2621,7 @@
     "latitude of center coordinates": "latitude of center coordinates",
     "longitude of center coordinates": "longitude of center coordinates",
     "Memory": "Memory",
-    "my release": "my release",
+    "My Release": "My Release",
     "new users": "new users",
     "No data": "No data",
     "number of crashes": "number of crashes",
