--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -483,7 +483,7 @@
     "partition order message": "分区顺序消息",
     "pay as you go": "按量付费",
     "payment methods": "付费方式",
-    "pending approval": "待审批",
+    "Pending": "待审批",
     "performance type": "性能型",
     "platform occupies 2 nodes": "平台占用2台机器",
     "platform-vpn client network segment": "平台vpn 客户端网段",
@@ -800,7 +800,7 @@
     "startDate": "开始日期",
     "state": "状态",
     "Switch": "切换",
-    "test case": "用例",
+    "Test Case": "用例",
     "text": "文本",
     "Text Edit": "文本编辑",
     "Text Type": "文本类型",
@@ -893,8 +893,7 @@
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
     "Post": "发表",
-    "Project homepage": "主页",
-    "Projects": "项目管理",
+    "Projects-manage": "项目管理",
     "Reference": "引用",
     "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "暂不支持渲染多层嵌套结构，请前往文本模式。",
     "Scenes": "场景集合",
@@ -990,7 +989,8 @@
     "app logo": "应用图标",
     "App Member": "应用成员",
     "app name": "应用名称",
-    "app release": "应用制品",
+    "App artifact": "应用制品",
+    "App Artifacts": "应用制品",
     "app release confirmation": "应用发布确认",
     "App repository address": "应用仓库地址",
     "App type": "应用类型",
@@ -1156,7 +1156,6 @@
     "Complex": "复杂",
     "Complexity": "复杂度",
     "condition to end loop": "循环结束条件",
-    "config data": "配置单",
     "config information": "配置信息",
     "Configuration Center": "配置中心",
     "Configuration": "配置",
@@ -1365,7 +1364,7 @@
     "Help you better manage your notifications": "帮助您更好地组织通知项",
     "High": "紧急",
     "historical analysis": "历史分析",
-    "home page": "主页",
+    "Homepage": "主页",
     "Host address": "主机地址",
     "hosts mapping": "Hosts 映射",
     "How to start": "如何开始",
@@ -1378,7 +1377,7 @@
     "Import source": "引入源",
     "Import use case": "引入用例",
     "Informal": "非正式",
-    "Initiated by me": "我发起的",
+    "Initiated by Me": "我发起的",
     "input bug name": "输入缺陷名称",
     "input custom boards name": "请输入自定义看板名",
     "Input the expected result": "输入预期结果",
@@ -1485,7 +1484,7 @@
     "Move to": "移动到",
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
-    "my approval": "我审批的",
+    "Approved by Me": "我审批的",
     "name is required": "名称不能为空",
     "Network configuration": "网络配置",
     "new": "新建",
@@ -1562,7 +1561,7 @@
     "outputs form": "出参表单",
     "overall score": "总评得分",
     "owned application": "所属应用",
-    "Iteration": "所属迭代",
+    "Iteration-owned": "所属迭代",
     "owned status": "所属状态",
     "p1": "P1",
     "p2": "P2",
@@ -1675,7 +1674,7 @@
     "Private-project": "私有项目",
     "professional edition": "专业版",
     "Progress": "进度",
-    "project collaboration": "项目协同",
+    "Collaboration": "项目协同",
     "Project collaborative participation index": "项目协同参与指数",
     "project created successfully": "创建项目成功",
     "project deleted successfully": "删除项目成功",
@@ -1688,7 +1687,7 @@
     "project updated successfully": "更新项目成功",
     "project-img-copyright-tip": "* Pexels 上的 Scott Webb 拍摄的图片",
     "Once set as a project-level app, the pipeline of this app can directly call the pipeline of other apps in the project.": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
-    "projects": "项目",
+    "Projects": "项目",
     "protect branch, not editable": "保护分支, 不可编辑",
     "Branch protection": "分支保护",
     "When enabled, only the app owner and leader can perform operations, and other members can only submit code through MR.": "分支保护开启后，只有应用所有者、应用研发主管才能操作，其他成员只能通过mr提交代码",
@@ -1801,7 +1800,7 @@
     "source branch has been deleted": "源分支已被删除",
     "source branch is protected, you have no permission yet": "源分支被保护，合并后将删除源分支，您暂无权限操作",
     "Source type": "源类型",
-    "sprint": "迭代",
+    "Iteration": "迭代",
     "srm": "采供能力",
     "Starred apps": "星标应用",
     "No starred apps": "暂无星标应用",
@@ -1860,7 +1859,7 @@
     "task params": "任务参数",
     "template select": "模板选择",
     "Terminated": "终止",
-    "test case": "测试用例",
+    "Test Case": "测试用例",
     "Number of test days": "测试天数",
     "Principal-test": "测试负责人",
     "Test output": "测试输出",
@@ -1868,10 +1867,12 @@
     "Test pass rate": "测试通过率",
     "Plan": "执行计划",
     "test plan status": "测试计划状态",
-    "test report": "测试报告",
+    "Test Reports": "测试报告",
+    "Test Report": "测试报告",
     "Test report details": "测试报告详情",
     "Test set": "测试集",
-    "test statistics": "测试统计",
+    "Test statistics": "测试统计",
+    "Test Statistics": "测试统计",
     "Test summary": "测试总结",
     "testing": "测试中",
     "the alarm strategy will be permanently deleted": "该告警策略将被永久删除",
@@ -2582,7 +2583,7 @@
     "Top detail": "Top详情",
     "User id and device id cannot be empty at the same time": "用户id和设备id不能同时为空",
     "active user": "活跃用户",
-    "add content": "新增发布内容",
+    "Add": "新增发布内容",
     "add version": "新建版本",
     "affect the number of users": "影响用户数",
     "affect the proportion of users": "影响用户占比",
@@ -2621,7 +2622,7 @@
     "latitude of center coordinates": "中心点坐标纬度",
     "longitude of center coordinates": "中心点坐标经度",
     "Memory": "内存",
-    "my release": "我的发布",
+    "My Release": "我的发布",
     "new users": "新增用户",
     "No data": "无数据",
     "number of crashes": "崩溃次数",
