--- a/shell/app/modules/dop/locales/en.json
+++ b/shell/app/modules/dop/locales/en.json
@@ -7,7 +7,7 @@
   "deployment request": "deployment request",
   "JVM analysis": "JVM analysis",
   "Approved": "Approved",
-  "Initiated by me": "Initiated by me",
+  "Initiated by Me": "Initiated by Me",
   "search by owned project": "search by owned project",
   "Search by project name": "Search by project name"
 }
