--- a/shell/app/modules/dop/locales/zh.json
+++ b/shell/app/modules/dop/locales/zh.json
@@ -7,7 +7,7 @@
   "deployment request": "部署请求",
   "JVM analysis": "JVM 分析",
   "Approved": "我审批的",
-  "Initiated by me": "我发起的",
+  "Initiated by Me": "我发起的",
   "search by owned project": "通过所在项目搜索",
   "Search by project name": "通过项目名称搜索"
 }
