feat(common): internationalization-optimization *feat: side menu *feat: tab menu

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -17,6 +17,7 @@
     "Alibaba Cloud": "阿里云",
     "All members of the organization can view": "当前组织下所有成员都可以查看",
     "App": "应用",
+    "Apps": "应用",
     "Approve": "审批",
     "April": "4月",
     "Are you sure to leave?": "确定离开",
@@ -184,6 +185,7 @@
     "Add-application": "新建应用",
     "Add-member": "添加成员",
     "add project": "新建项目",
+    "Add Project": "创建项目",
     "add {name}": "添加{name}",
     "added successfully": "添加成功",
     "addon": "扩展",
@@ -194,7 +196,7 @@
     "Advanced Search": "高级搜索",
     "advanced settings": "高级设置",
     "agree": "同意",
-    "Configuration": "告警配置",
+    "Configuration-alarm": "告警配置",
     "alarm data report": "告警数据报表",
     "Overview-alarm": "告警总览",
     "History": "告警列表",
@@ -328,8 +330,8 @@
     "Comparison operator": "比较运算符",
     "comparison results": "对比结果",
     "Component": "组件",
-    "config": "配置",
-    "config sheet": "配置单",
+    "Configuration": "配置",
+    "Configuration Sheet": "配置单",
     "configuration information": "配置信息",
     "configuration mode": "配置模式",
     "configuration upgrade": "配置更新",
@@ -414,6 +416,7 @@
     "detail": "详情",
     "dev": "开发",
     "dev environment": "开发环境",
+    "Dev environment": "开发环境",
     "develop": "开发",
     "developer": "开发者",
     "device ID": "设备ID",
@@ -576,6 +579,7 @@
     "merge": "合并",
     "merged at": "合并于",
     "Message": "消息",
+    "message": "消息",
     "Message-center": "消息中心",
     "meters": "米",
     "Microservice": "微服务",
@@ -667,12 +671,12 @@
     "path starts with /": "路径以/开头",
     "pause": "暂停",
     "pending": "待审批",
-    "pending approval": "待审核",
+    "Pending": "待审核",
     "pending execution": "待执行",
     "Performance range": "性能区间",
     "Period": "周期",
     "Phone-tel": "电话",
-    "pipeline": "流水线",
+    "Pipelines": "流水线",
     "Platform": "平台",
     "platform configs": "平台配置",
     "please authenticate first": "请先进行认证",
@@ -717,6 +721,7 @@
     "In Progress": "进行中",
     "prod": "生产",
     "prod environment": "生产环境",
+    "Production environment": "生产环境",
     "production": "生产",
     "professional": "专业版",
     "project": "项目",
@@ -772,7 +777,7 @@
     "Request Limit": "访问限制",
     "Request method": "请求方法",
     "required": "必需",
-    "requirement": "需求",
+    "Requirement": "需求",
     "Requirement & Task": "需求与任务",
     "reset": "重置",
     "reset Password": "重置密码",
@@ -842,6 +847,7 @@
     "specification": "规格",
     "staging": "预发",
     "staging environment": "预发环境",
+    "Staging environment": "预发环境",
     "Standard": "标准",
     "start": "开始",
     "Start time": "启动时间",
@@ -876,9 +882,9 @@
     "System version": "系统版本",
     "tag": "标签",
     "Label": "标签",
-    "task": "任务",
+    "Task": "任务",
     "ID": "任务 ID",
-    "Task": "任务列表",
+    "Task-list": "任务列表",
     "Task type": "任务类型",
     "tcp protocol": "TCP 协议",
     "template already exists": "该模板已存在",
@@ -887,6 +893,7 @@
     "template was created successfully": "模板创建成功",
     "test": "测试",
     "test environment": "测试环境",
+    "Test environment": "测试环境",
     "Testing": "测试",
     "Text Mode": "文本模式",
     "the current request has no {name}": "当前请求无{name}",
