fix(dop): release labels optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1711,6 +1711,7 @@
     "related task": "related task",
     "relation added successfully": "relation added successfully",
     "release name": "release name",
+    "release associated label will be deleted, confirm to delete?": "release associated label will be deleted, confirm to delete?",
     "release relationship": "release relationship",
     "Release version": "Release version",
     "Remark": "Remark",
