feat(common): internationalization-optimization *feat: add bottom

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -715,6 +715,7 @@
     "merge": "合并",
     "merged at": "合并于",
     "Message-center": "消息中心",
+    "message": "消息",
     "meters": "米",
     "middleware chart": "中间件图表",
     "millicore": "毫核",
@@ -772,6 +773,7 @@
     "path starts with /": "路径以/开头",
     "pause": "暂停",
     "pending": "待审批",
+    "pending execution": "待执行",
     "platform configs": "平台配置",
     "please authenticate first": "请先进行认证",
     "please choose {name}": "请选择{name}",
