--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -698,7 +698,9 @@
     "Selected": "Selected",
     "Send Test Notification": "Send Test Notification",
     "Specification": "Specification",
+    "Switch": "Switch",
     "TEST": "TEST",
+    "Test Case": "Test Case",
     "Text Edit": "Text Edit",
     "Text Type": "Text Type",
     "The configuration cannot be restored after deletion. Continue": "The configuration cannot be restored after deletion. Continue",
@@ -802,8 +804,6 @@
     "start with letters, which can contain letters, numbers, dots, underscores and hyphens.": "start with letters, which can contain letters, numbers, dots, underscores and hyphens.",
     "startDate": "startDate",
     "state": "state",
-    "Switch": "Switch",
-    "Test Case": "Test Case",
     "text": "text",
     "the current data volume exceeds 500kb, please click": "the current data volume exceeds 500kb, please click",
     "the uploaded file must not exceed {size}M": "the uploaded file must not exceed {size}M",
@@ -1892,6 +1892,7 @@
     "task name": "task name",
     "task params": "task params",
     "template select": "template select",
+    "test plan status": "test plan status",
     "testing": "testing",
     "the alarm strategy will be permanently deleted": "the alarm strategy will be permanently deleted",
     "the current action does not exist, please re-select!": "the current action does not exist, please re-select!",
