fix(#3324): fix side menu

--- a/locales/en.json
+++ b/locales/en.json
@@ -376,6 +376,7 @@
     "South China": "South China",
     "Southwest China {num}": "Southwest China {num}",
     "Staging environment": "Staging environment",
+    "Staging-env": "Staging",
     "Standard": "Standard",
     "Start time": "Start time",
     "Stopped": "Stopped",
@@ -393,6 +394,7 @@
     "Task-list": "Task",
     "Test": "Test",
     "Test Management": "Test Management",
+    "Testing-manage": "Testing",
     "Test environment": "Test environment",
     "Testing": "Testing",
     "Text Mode": "Text Mode",
@@ -607,6 +609,7 @@
     "dev": "dev",
     "dev environment": "dev environment",
     "develop": "develop",
+    "Development": "Development",
     "developer": "developer",
     "device ID": "device ID",
     "directory": "directory",
@@ -808,7 +811,8 @@
     "process initialization": "process initialization",
     "prod": "prod",
     "prod environment": "prod environment",
-    "production": "production",
+    "Production": "Production",
+    "Production-env": "Production",
     "professional": "professional",
     "project": "project",
     "project-app-name-tip": "you can only use lowercase letters or numbers to begin and end. The hyphen can use -",
@@ -912,6 +916,7 @@
     "template was created successfully": "template was created successfully",
     "test": "test",
     "test environment": "test environment",
+    "Testing-env": "Testing",
     "the current request has no {name}": "the current request has no {name}",
     "the current version is deprecated": "the current version is deprecated",
     "the item will be permanently deleted!": "the item will be permanently deleted!",
