--- a/locales/zh.json
+++ b/locales/zh.json
@@ -376,6 +376,7 @@
     "South China": "华南{num}",
     "Southwest China {num}": "西南{num}",
     "Staging environment": "预发环境",
+    "Staging-env": "预发环境",
     "Standard": "标准",
     "Start time": "启动时间",
     "Stopped": "已停止",
@@ -393,6 +394,7 @@
     "Task-list": "任务列表",
     "Test": "测试",
     "Test Management": "测试管理",
+    "Testing-manage": "测试管理",
     "Test environment": "测试环境",
     "Testing": "测试",
     "Text Mode": "文本模式",
@@ -607,6 +609,7 @@
     "dev": "开发",
     "dev environment": "开发环境",
     "develop": "开发",
+    "Development": "开发环境",
     "developer": "开发者",
     "device ID": "设备ID",
     "directory": "目录",
@@ -809,6 +812,7 @@
     "process initialization": "流程初始化",
     "prod": "生产",
     "prod environment": "生产环境",
+    "Production-env": "生产环境",
     "production": "生产",
     "professional": "专业版",
     "project": "项目",
@@ -913,6 +917,7 @@
     "template was created successfully": "模板创建成功",
     "test": "测试",
     "test environment": "测试环境",
+    "Testing-env": "测试环境",
     "the current request has no {name}": "当前请求无{name}",
     "the current version is deprecated": "当前版本已被弃用",
     "the item will be permanently deleted!": "该项将被永久删除!",
