--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1167,6 +1167,7 @@
     "Project-level app": "Project-level app",
     "Projects": "Projects",
     "Projects-manage": "Projects",
+    "Project Management": "Project Management",
     "Public": "Public",
     "Quality Access Control": "Quality Access Control",
     "Ranking": "Ranking",
@@ -1222,6 +1223,7 @@
     "Test Case": "Test Case",
     "Test Report": "Test Report",
     "Test Reports": "Test Reports",
+    "Testing Reports": "Testing Reports",
     "Test Statistics": "Test Statistics",
     "Test output": "Test output",
     "Test pass rate": "Test pass rate",
