--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1160,7 +1160,8 @@
     "Project Information": "项目信息",
     "Project Member": "项目成员",
     "Projects": "项目",
-    "Projects-manage": "项目管理",
+    "Project-manage": "项目管理",
+    "Projects Management": "项目管理",
     "Public": "公开应用",
     "Quality Access Control": "代码质量门禁",
     "Ranking": "排名",
@@ -1213,6 +1214,7 @@
     "System built-in Git repository": "系统内置Git仓库",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
     "Terminated": "终止",
+    "Testing Reports": "测试报告",
     "Testcase": "用例",
     "The app branch rule is mainly to protect the app code branch and set switches for continuous integration. Please configure it as needed.": "应用分支规则主要是对应用代码分支的保护和持续集成的开关设置，请根据应用实际需要合理配置。",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
